--- a/.env.development
+++ b/.env.development
@@ -3,3 +3,8 @@ SMTP_HOST="localhost"
 SMTP_PORT="1025"
 FRONTEND_URL="http://localhost:5173"
 JWT_SECRET="superSecretJwtSecret"
+S3_ACCESS_KEY="minioadmin"
+S3_SECRET_KEY="minioadmin"
+S3_BUCKET_NAME="allaboutgames"
+S3_ENDPOINT="http://localhost:9000"
+S3_CDN_URL="http://localhost:9000"
