control email sender from env variables

--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,7 @@
 DB_CONNECTION_STRING="mongodb://all-about-games:all-about-games@localhost:27017/all-about-games?directConnection=true"
 SMTP_HOST="localhost"
 SMTP_PORT="1025"
+SMTP_FROM_EMAIL="mailer@allaboutgames.xyz"
 FRONTEND_URL="http://localhost:5173"
 JWT_SECRET="superSecretJwtSecret"
 S3_ACCESS_KEY="minioadmin"
